tests/invalid/native_module_unsupported_attr/main.py
import random

if __name__ == "__main__":
    x: int = random.randint(1, 3)
